--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
               <p>
                 Kubwa <br>
                 Abuja, Nigeria<br><br>
-                <strong>Phone:</strong> 2349030388824<br>
+                <strong>Phone:</strong> +2349030388824<br>
                 <strong>Email:</strong> <span>joyamadasun1997@gmail.com</span><br>
               </p>
               <div class="social-links mt-3">
@@ -651,11 +651,6 @@
               </div>
             </div>
           </div>
-        
-
-
-
-
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
