--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 Kubwa <br>
                 Abuja, Nigeria<br><br>
                 <strong>Phone:</strong> +2349030388824<br>
-                <strong>Email:</strong> <span>joyamadasun1997@gmail.com</span><br>
+                <strong>Email:</strong> <span>cheriieyskitchen@gmail.com</span><br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.instagram.com/cheriieyskitchen/" target="_blank"><i class="bx bxl-instagram"></i></a>
