--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>joyamadasun1997@gmail.com</p>
+                <p>cheriieyskitchen@gmail.com</p>
               </div>
 
               <div class="phone">
