--- a/index.html
+++ b/index.html
@@ -651,6 +651,19 @@
             </div>
           </div>
 
+          <!-- Begin Mailchimp Signup Form  <div id="mc_embed_signup">
+
+          </div>-->
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+
+
+<!--End mc_embed_signup-->
+
           <!-- Begin Mailchimp Signup Form -->
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
@@ -659,14 +672,8 @@
             <form action="https://bennyblasco.us7.list-manage.com/subscribe/post?u=77e6076bde59566bf2fbe88d5&amp;id=1b138f1d67" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
 
-            <div class="mc-field-group">
-            	<label for="mce-EMAIL">Email Address </label>
-            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-            	<div id="mce-responses" class="clear">
-            		<div class="response" id="mce-error-response" style="display:none"></div>
-            		<div class="response" id="mce-success-response" style="display:none"></div>
-            	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_77e6076bde59566bf2fbe88d5_1b138f1d67" tabindex="-1" value=""></div>
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                 </div>
