--- a/index.html
+++ b/index.html
@@ -735,6 +735,8 @@ function submitForm(){
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <script src="form/contactform.js"></script>
+
 </body>
 
 </html>
