testing contact form

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ function submitForm(){
                 </div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="m" rows="8" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <textarea class="form-control" name="m" rows="10" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
@@ -639,7 +639,7 @@ function submitForm(){
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button id="mybtn" type="submit" value="Submit Form">Send Message</button></div>
             </form>
 
           </div>
