--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ function submitForm(){
 	ajax.onreadystatechange = function() {
 		if(ajax.readyState == 4 && ajax.status == 200) {
 			if(ajax.responseText == "success"){
-				_("my_form").innerHTML = '<h2>Thanks '+_("n").value+', your message has been sent.</h2>';
+        this_form.find('.sent-message').slideDown();
+				//_("my_form").innerHTML = '<h2>Thanks '+_("n").value+', your message has been sent.</h2>';
 			} else {
 				_("status").innerHTML = ajax.responseText;
 				_("mybtn").disabled = false;
