--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ function submitForm(){
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+<!--  <script src="assets/vendor/php-email-form/validate.js"></script>-->
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
@@ -732,7 +732,7 @@ function submitForm(){
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-  <script src="form/contactform.js"></script>
+  <!-- <script src="form/contactform.js"></script>-->
 
 </body>
 
