--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function submitForm(){
 		if(ajax.readyState == 4 && ajax.status == 200) {
 			if(ajax.responseText == "success"){
         this_form.find('.sent-message').slideDown();
-				//_("my_form").innerHTML = '<h2>Thanks '+_("n").value+', your message has been sent.</h2>';
+				_("my_form").innerHTML = '<h2>Thanks '+_("n").value+', your message has been sent.</h2>';
 			} else {
 				_("status").innerHTML = ajax.responseText;
 				_("mybtn").disabled = false;
@@ -723,7 +723,7 @@ function submitForm(){
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-<!--  <script src="assets/vendor/php-email-form/validate.js"></script>-->
+  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
