Added item to menu

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ function submitForm(){
               <li data-filter=".filter-starters">Daily Lunch Packs</li>
               <li data-filter=".filter-salads">Bulk Orders</li>
               <li data-filter=".filter-specialty">Small Chops</li>
+              <li data-filter=".filter-frozen">Frozen Foods</li>
             </ul>
           </div>
         </div>
