--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ function submitForm(){
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>₦2500</span>
+              <a href="#">Yam</a><span>₦2500</span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
