--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ function submitForm(){
               <a href="#">Yam</a><span>₦2500</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Contains meat
             </div>
           </div>
 
