--- a/index.html
+++ b/index.html
@@ -204,8 +204,11 @@ function submitForm(){
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-starters">Daily Lunch Packs</li>
               <li data-filter=".filter-salads">Bulk Orders</li>
-              <li data-filter=".filter-specialty">Small Chops</li>
-              <li data-filter=".filter-frozen">Frozen Foods</li>
+              <li data-filter=".filter-specialty">Small Chops Platter</li>
+              <li data-filter=".filter-frozen">Frozen Chops</li>
+              <li data-filter=".filter-smoothies">Smoothies</li>
+              <li data-filter=".filter-picnic">Picnic Platters</li>
+              <li data-filter=".filter-outdoor">Outdoor Catering</li>
             </ul>
           </div>
         </div>
