--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function submitForm(){
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/refuelpack.jpeg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Refuel Pack</a><span>₦1500</span>
             </div>
