--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@ function submitForm(){
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/refuelpacknew.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Basmati Jollof</a><span>₦2500</span>
+            </div>
+            <div class="menu-ingredients">
+              Plantain, Grilled Chicken/Turkey
+            </div>
+          </div>
+
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
             <div class="menu-content">
