--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ function submitForm(){
       </div>
     </section><!-- End Menu Section -->
 
-    <!-- ======= Specials Section ======= -->
+    <!-- ======= Specials Section =======
     <section id="specials" class="specials">
       <div class="container" data-aos="fade-up">
 
@@ -416,9 +416,9 @@ function submitForm(){
         </div>
 
       </div>
-    </section><!-- End Specials Section -->
+    </section><! End Specials Section -->
 
-    <!-- ======= Events Section ======= -->
+    <!-- ======= Events Section =======
     <section id="events" class="events">
       <div class="container" data-aos="fade-up">
 
@@ -507,10 +507,10 @@ function submitForm(){
         </div>
 
       </div>
-    </section><!-- End Events Section -->
+    </section>< End Events Section 
 
 
-    <!-- ======= Testimonials Section ======= -->
+     Testimonials Section =======
     <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -579,7 +579,7 @@ function submitForm(){
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>< End Testimonials Section -->
 
 
 
@@ -645,6 +645,7 @@ function submitForm(){
                   <div class="validate"></div>
                 </div>
               </div>
+
               <div class="form-group">
                 <textarea class="form-control" name="m" rows="10" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                 <div class="validate"></div>
@@ -722,6 +723,7 @@ function submitForm(){
         </div>
       </div>
     </div>
+
 
     <div class="container">
       <div class="copyright">
