--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ function submitForm(){
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#menu">Menu</a></li>
-          <li><a href="#specials">Specials</a></li>
-          <li><a href="#events">Events</a></li>
+          <!-- <li><a href="#specials">Specials</a></li>
+          <li><a href="#events">Events</a></li> -->
           <li class="book-a-table text-center"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -507,7 +507,7 @@ function submitForm(){
         </div>
 
       </div>
-    </section>< End Events Section 
+    </section>< End Events Section
 
 
      Testimonials Section =======
