--- a/index.html
+++ b/index.html
@@ -235,27 +235,62 @@ function submitForm(){
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Bread Barrel</a><span>₦200</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>₦3500</span>
+              <a href="#">Vegitable soup with native fowl</a><span>₦2200</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Egusi soup with native fowl</a><span>₦2000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Cat fish</a><span>₦800</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Beef</a><span>₦500</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Semo</a><span>₦300</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Pounded yam</a><span>₦500</span>
+            </div>
+            <div class="menu-ingredients">
+
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <!-- <div class="col-lg-6 menu-item filter-salads">
             <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Caesar Selections</a><span>₦500</span>
@@ -263,57 +298,66 @@ function submitForm(){
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
             </div>
-          </div>
+          </div> -->
+
+          <!-- Small Chops Platter -->
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>₦1200</span>
+              <a href="#">Mini package</a><span>₦2000</span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              4 spring rolls, 4 samosas and 3 beef sticks
             </div>
           </div>
-
-          <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>₦2500</span>
-            </div>
-            <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Greek Salad</a><span>₦4500</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
-            <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>₦3000</span>
-            </div>
-            <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
-            </div>
-          </div>
-
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>₦4500</span>
+              <a href="#">Basic package</a><span>₦5000</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+            10 puffs,  8 spring rolls, 8 samosas and 5 beef sticks
             </div>
           </div>
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Plus package</a><span>₦10000</span>
+            </div>
+            <div class="menu-ingredients">
+            20 puffs,  16 spring rolls, 16 samosas and 8 beef sticks
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Max package</a><span>₦15000</span>
+            </div>
+            <div class="menu-ingredients">
+            20 puffs,  20 spring rolls, 20 samosas and 15 beef sticks, 5 Plantain sticks
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-specialty">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Premium package</a><span>₦30000</span>
+            </div>
+            <div class="menu-ingredients">
+            50 puffs,  40 spring rolls, 40 samosas, 20 Peppered chicken and 10 beef sticks
+            </div>
+          </div>
+
+          <!-- Frozen Chops -->
+          <!-- <div class="col-lg-6 menu-item filter-frozen">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Premium package</a><span>₦30000</span>
+            </div>
+            <div class="menu-ingredients">
+            50 puffs,  40 spring rolls, 40 samosas, 20 Peppered chicken and 10 beef sticks
+            </div>
+          </div> -->
 
         </div>
 
