--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -290,15 +290,16 @@ function submitForm(){
             </div>
           </div>
 
-          <!-- <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
+          <!-- Bulk Orders -->
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>₦500</span>
+              <a href="#">Stew (chicken)</a><span>1.5l (N6000), 3l (N12,000)</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+
             </div>
-          </div> -->
+          </div>
 
           <!-- Small Chops Platter -->
 
