--- a/index.html
+++ b/index.html
@@ -208,37 +208,48 @@ function submitForm(){
               <li data-filter=".filter-frozen">Frozen Chops</li>
               <li data-filter=".filter-smoothies">Smoothies</li>
               <li data-filter=".filter-picnic">Picnic Platters</li>
-              <li data-filter=".filter-outdoor">Outdoor Catering</li>
+              <!-- <li data-filter=".filter-outdoor">Outdoor Catering</li> -->
             </ul>
           </div>
         </div>
 
+        <!-- Daily Lunch Packs -->
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/refuelpacknew.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Refuel Pack</a><span>₦1500</span>
+              <a href="#">Party Jollof & chicken</a><span>₦2000</span>
             </div>
             <div class="menu-ingredients">
-              Spicy Jollof and Peppered Beef
+
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/refuelpacknew.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Basmati Jollof</a><span>₦2500</span>
+              <a href="#">Basmati Jollof</a><span>₦3000</span>
             </div>
             <div class="menu-ingredients">
-              Plantain, Grilled Chicken/Turkey
+              Plantain, Grilled Chicken
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="assets/img/menu/refuelpacknew.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Sausage Chinese rice</a><span>₦3000</span>
+            </div>
+            <div class="menu-ingredients">
+              With grilled chicken
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Vegitable soup with native fowl</a><span>₦2200</span>
+              <a href="#">Vegetable soup with preferred swallow</a><span>₦2200</span>
             </div>
             <div class="menu-ingredients">
 
@@ -247,13 +258,13 @@ function submitForm(){
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Egusi soup with native fowl</a><span>₦2000</span>
+              <a href="#">Egusi soup with preferred swallow</a><span>₦2000</span>
             </div>
             <div class="menu-ingredients">
 
             </div>
           </div>
-          <div class="col-lg-6 menu-item filter-starters">
+          <!-- <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Cat fish</a><span>₦800</span>
@@ -288,7 +299,7 @@ function submitForm(){
             <div class="menu-ingredients">
 
             </div>
-          </div>
+          </div> -->
 
           <!-- Bulk Orders -->
           <div class="col-lg-6 menu-item filter-salads">
@@ -300,6 +311,149 @@ function submitForm(){
 
             </div>
           </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Stew (beef)</a><span>1.5l (N4500),  3l (N9000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Stew (goat meat)</a><span>1.5l (N5000),  3l (N10000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Peppered beef</a><span>10 pieces (N2500)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Chicken Curry</a><span>1.5l(N6000), 3l (N12,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Egusi soup (chicken) </a><span>1.5l(N6500), 3l (N12,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Egusi soup (beef) </a><span>1.5l(N5000), 3l (N10,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Egusi soup (fish) </a><span>1.5l(N5000), 3l (N10,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Fried plantain </a><span>small portion(N3000), large portion (N5,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Spicy basmati jollof </a><span>1.5l (N6500), 3l (N12000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Stir fry spaghetti  </a><span>1.5l (N7000), 3l (N14,000)</span>
+            </div>
+            <div class="menu-ingredients">
+              with shredded chicken chunks
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Spicy jollof  </a><span>1.5l (N4000), 3l (N8000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Chinese sausage rice  </a><span>1.5l (N6500), 3l (N12000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Peppered Chicken  </a><span>3pieces (N3500), 6pieces (N7000), 10 pieces (N10,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Peppered Turkey  </a><span>3pieces (N4500), 6pieces (N9000), 10 pieces (N13,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-salads">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Peppered Snail  </a><span>3pieces (N4500), 6pieces (N9000), 10 pieces (N13,000)</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
 
           <!-- Small Chops Platter -->
 
@@ -350,15 +504,100 @@ function submitForm(){
           </div>
 
           <!-- Frozen Chops -->
-          <!-- <div class="col-lg-6 menu-item filter-frozen">
+          <div class="col-lg-6 menu-item filter-frozen">
             <img src="assets/img/logo.png" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Premium package</a><span>₦30000</span>
+              <a href="#">Beef samosa</a><span>10 pieces ₦1000</span>
             </div>
             <div class="menu-ingredients">
-            50 puffs,  40 spring rolls, 40 samosas, 20 Peppered chicken and 10 beef sticks
+
             </div>
-          </div> -->
+          </div>
+          <div class="col-lg-6 menu-item filter-frozen">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Spring rolls</a><span>10 pieces ₦1000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <!-- Smoothies -->
+          <div class="col-lg-6 menu-item filter-smoothies">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Banana cream smoothie</a><span>₦1500</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-smoothies">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Pineapple & honey</a><span>₦1500</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+
+          <!-- Picnic Platter -->
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Signature jollof tray </a><span>₦8000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Basmati jollof tray </a><span>₦12000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Basmati fried tray </a><span>₦16000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Chicken tray  </a><span>₦16000</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Shrimp and liver fried rice   </a><span>₦1300</span>
+            </div>
+            <div class="menu-ingredients">
+
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-picnic">
+            <img src="assets/img/logo.png" class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Owambe tray </a><span>₦45000</span>
+            </div>
+            <div class="menu-ingredients">
+              Basmati fried rice, jollof tray and chicken tray
+            </div>
+          </div>
 
         </div>
 
