--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ function submitForm(){
 
         <div class="section-title">
           <h2>Events</h2>
-          <p>Organize Your Events in our Restaurant</p>
+          <p>Organize Your Events with our Outdoor Catering</p>
         </div>
 
         <div class="owl-carousel events-carousel" data-aos="fade-up" data-aos-delay="100">
